# riotsensors

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  Makefile.inc  README.md  ieee754_network.c  prebuild.sh  rs.c
cmake/: FindGTest.cmake
docs/: index.html
include/: dummy.h  ieee754_network.h  rs.h
linuxconnector/: CMakeLists.txt  rs_connector.c
linuxconnector/include/: rs_connector.h
linuxconnector/tests/: CMakeLists.txt  rs_connector_test.cpp
packets/: CMakeLists.txt  Makefile  Makefile.inc  ieee754_network.c  rs_packets.c  rs_packets.h
packets/include/: rs_packets.h
packets/tests/: CMakeLists.txt
protocol/: CMakeLists.txt  Makefile  Makefile.inc  lambda_registry.c  rs_constants.c  rs_packets.c
protocol/include/: ieee754_network.h  lambda_registry.h  rs_constants.h  rs_packets.h
protocol/tests/: CMakeLists.txt  ieee754_network_test.cpp  lambda_registry_test.cpp  rs_packets_test.cpp
restserver/: CMakeLists.txt  riotsensors_server.cpp  rs_rest.cpp  rs_server.cpp  rs_server_coap.cpp  rs_server_http.cpp  swagger-linux.yml  swagger-riot.yml  swagger.yml
restserver/include/: riotsensors_server.h  rs_rest.h  rs_server.h  rs_server_coap.h  rs_server_http.h
riotmodule/: CMakeLists.txt  Makefile  Makefile.inc  dummy.c  rs.c  rs_coap_server.c  rs_coap_utils.c  rs_packets_riot.c
riotmodule/include/: dummy.h  rs.h  rs_coap_server.h  rs_coap_utils.h  rs_packets_riot.h
riotmodule/tests/: CMakeLists.txt  rs_coap_utils_test.cpp  rs_test.cpp
tests/: CMakeLists.txt  ieee754_network_test.cpp
